# superrustendo

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.MD  coverage.sh  format_json.sh  pages.html  show_coverage.sh
py/: main.py
src/: lib.rs  main.rs  main.rs.bak
src/apu/: mod.rs
src/cartridge/: mod.rs
src/cpu/: address.rs  addressmodes.rs  constants.rs  decoder.rs  dissassembler.rs  instructions.rs  mod.rs
src/cpu/instructions/: mod.rs
src/cpu/instructions/ops/: adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  bra.rs  brk.rs  brl.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  mod.rs  mvn.rs  mvp.rs  ora.rs  pea.rs  (+47 more)
src/mem/: hw_registers.rs  mod.rs  wram.rs
src/ppu/: mod.rs  sprite.rs
src/tooling/: disassembler.rs
tests/: decoder.rs  instructions.rs  mod.rs
tests/instructions/: and.rs  clc.rs  cld.rs  mod.rs  rep.rs  sei.rs  txs.rs  txy.rs  xce.rs
