[package]
name = "snes-sim"
version = "0.1.0"
authors = ["Andre Rosenhammer <andre.rosenhammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_struct = "0.6.0"
byteorder = "1.3.2"
bitpat = "0.1.1"
# bit_field = "0.10.0"